# data-systems

./: .env.sample  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Tiltfile  package.json  release-plz.toml  tarpaulin.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: release-plz.yaml
benches/data-parser/: Cargo.toml
benches/data-parser/benches/: deserialize.rs  deserialize_decompress.rs  serialize.rs  serialize_compress.rs
benches/data-parser/src/: lib.rs
benches/load-tester/: Cargo.toml
benches/load-tester/src/runners/: cli.rs  runner_all.rs  runner_streamable.rs
cluster/: README.md
cluster/charts/fuel-streams/: Chart.yaml  values-local.yaml  values.yaml
cluster/charts/fuel-streams/dashboards/: consumer-metrics.json  publisher-metrics.json  webserver-metrics.json
cluster/charts/fuel-streams/templates/: _blocks-container.tpl  _blocks-pod.tpl  _blocks-resource.tpl  _blocks-template.tpl  _helpers.tpl  _hpa.yaml  _pod_monitor.yaml  _service.yaml  _service_monitor.yaml  service-account.yaml
cluster/charts/fuel-streams/templates/api/: certificate.yaml
cluster/charts/fuel-streams/templates/publisher/: statefulset.yaml
cluster/charts/fuel-streams/templates/webserver/: certificate.yaml
cluster/charts/fuel-streams/tests/api/: certificate_test.yaml  deployment_test.yaml
cluster/charts/fuel-streams/tests/consumer/: deployment_test.yaml
cluster/charts/fuel-streams/tests/publisher/: statefulset_test.yaml
cluster/charts/fuel-streams/tests/webserver/: certificate_test.yaml  deployment_test.yaml
cluster/docker/: docker-compose.yml
cluster/scripts/: gen_env_secret.sh  setup_minikube.sh
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/server/: deliver_policy.rs  requests.rs  responses.rs  subscription.rs
crates/core/src/stream/: error.rs  fuel_streams.rs  stream_impl.rs
crates/data-parser/: Cargo.toml  README.md
crates/data-parser/src/: lib.rs
crates/domains/: Cargo.toml
crates/domains/src/: msg_payload.rs  queryable.rs  subjects.rs
crates/domains/src/blocks/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/domains/src/inputs/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/domains/src/outputs/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/domains/src/receipts/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/domains/src/transactions/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/domains/src/utxos/: db_item.rs  packets.rs  queryable.rs  record_impl.rs  subjects.rs  types.rs
crates/message-broker/: Cargo.toml
crates/pedronauck-streams/: Cargo.toml
crates/pedronauck-streams/src/: lib.rs
crates/pedronauck-streams/src/client/: connection.rs  error.rs  types.rs
crates/store/: Cargo.toml
crates/store/src/db/: db_impl.rs  db_item.rs
crates/store/src/record/: query_options.rs  record_impl.rs  record_packet.rs
crates/store/src/store/: store_impl.rs
crates/subject/: Cargo.toml  README.md
crates/subject/subject-derive/: Cargo.toml  README.md
crates/subject/subject-derive/src/: into_subject.rs  lib.rs  subject.rs
crates/subject/tests/: subject-derive.rs
crates/types/: Cargo.toml
crates/web-utils/: Cargo.toml
crates/web-utils/src/: shutdown.rs
crates/web-utils/src/api_key/: manager.rs  middleware.rs  props.rs
crates/web-utils/src/api_key/role/: role_impl.rs
examples/: Cargo.toml  blocks.rs  inputs.rs  outputs.rs  receipts.rs  subscribe_mult.rs  transactions.rs  utxos.rs
scripts/generate-api-keys/: Cargo.toml
scripts/generate-api-keys/src/: main.rs
scripts/subjects-schema/: Cargo.toml
scripts/subjects-schema/src/: main.rs
scripts/update-db/: Cargo.toml
scripts/update-db/src/: main.rs
services/api/: Cargo.toml
services/api/src/: main.rs  metrics.rs
services/api/src/server/: errors.rs  state.rs
services/api/src/server/handlers/: accounts.rs  blocks.rs  contracts.rs  inputs.rs  mod.rs  open_api.rs  outputs.rs  receipts.rs  transactions.rs  utxos.rs
services/consumer/: Cargo.toml
services/consumer/src/: errors.rs  fuel_stores.rs  main.rs
services/consumer/src/executor/: block_executor.rs  block_stats.rs
services/consumer/src/server/: metrics.rs  mod.rs  state.rs
services/publisher/: Cargo.toml
services/publisher/src/: cli.rs  error.rs  main.rs  metrics.rs  publish.rs  state.rs
services/webserver/: Cargo.toml  README.md
services/webserver/src/: main.rs  metrics.rs
services/webserver/src/server/: errors.rs  state.rs
services/webserver/src/server/handlers/: api_key_generate.rs  mod.rs  websocket.rs
services/webserver/src/server/websocket/: session.rs  subscribe.rs  unsubscribe.rs
tests/: Cargo.toml
tests/src/: fuel_core_helpers.rs  lib.rs
tests/tests/services/: consumer.rs
tests/tests/store/: blocks.rs  inputs.rs  outputs.rs  pattern_matching.rs  query_builder.rs  receipts.rs  record.rs  transactions.rs  utxo.rs
tests/tests/stream/: historical_data.rs  live_data.rs
tests/tests/web_utils/: api_key.rs  api_key_role.rs
