[package]
name = "load-tester"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
pedronauck-streams = { workspace = true, features = ["test-helpers"] }
pedronauck-streams-core = { workspace = true, features = ["test-helpers"] }
statrs = "0.18.0"
tokio.workspace = true
