[package]
name = "pedronauck-streams-core"
description = "Core components for working with streams of Fuel blockchain data"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-stream.workspace = true
dotenvy.workspace = true
fuel-core.workspace = true
fuel-tx.workspace = true
fuel-vm.workspace = true
futures.workspace = true
pedronauck-message-broker.workspace = true
pedronauck-streams-domains.workspace = true
pedronauck-streams-store.workspace = true
pedronauck-streams-subject.workspace = true
pedronauck-streams-types.workspace = true
pedronauck-web-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true

[features]
default = []
openapi = ["utoipa/actix_extras"]
test-helpers = [
  "fuel-core/test-helpers",
  "pedronauck-message-broker/test-helpers",
  "pedronauck-streams-domains/test-helpers",
  "pedronauck-streams-subject/test-helpers",
  "pedronauck-streams-store/test-helpers",
  "pedronauck-streams-types/test-helpers",
  "pedronauck-web-utils/test-helpers",
]
