[package]
name = "pedronauck-streams-domains"
description = "Domains definitions for fuel streams"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
async-trait.workspace = true
chrono.workspace = true
fuel-core.workspace = true
fuel-core-types.workspace = true
fuel-tx.workspace = true
fuel-vm.workspace = true
futures.workspace = true
pedronauck-streams-store.workspace = true
pedronauck-streams-subject.workspace = true
pedronauck-streams-types.workspace = true
rayon.workspace = true
sea-query = "0.32.2"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.12.0"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_urlencoded.workspace = true
test-case.workspace = true

[features]
default = []
test-helpers = [
  "fuel-core-types/test-helpers",
  "fuel-core/test-helpers",
  "pedronauck-streams-store/test-helpers",
  "pedronauck-streams-types/test-helpers",
]
