[package]
name = "pedronauck-streams"
description = "A library for working with streams of Fuel blockchain data"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
pedronauck-streams-core.workspace = true
pedronauck-streams-store.workspace = true
reqwest = "0.12.9"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.5.4"

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true

[features]
default = []
test-helpers = [
  "pedronauck-streams-core/test-helpers",
  "pedronauck-streams-store/test-helpers",
]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
