[package]
name = "pedronauck-streams-store"
description = "A database storage and retrieval system for Fuel blockchain data streams, providing PostgreSQL integration, async operations, and transaction management for the Fuel Data Systems ecosystem"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
dotenvy.workspace = true
pedronauck-data-parser.workspace = true
pedronauck-streams-subject.workspace = true
pedronauck-streams-types.workspace = true
serde.workspace = true
sqlx = { workspace = true, default-features = false, features = [
  "any",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "test-util",
] }
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = []
test-helpers = [
  "pedronauck-data-parser/test-helpers",
  "pedronauck-streams-types/test-helpers",
  "pedronauck-streams-subject/test-helpers",
]
