[package]
name = "pedronauck-web-utils"
description = "Fuel library for web utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actix-cors.workspace = true
actix-server.workspace = true
actix-service = "2.0.2"
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap = "6.1.0"
derive_more = { version = "1.0", features = ["full"] }
displaydoc.workspace = true
dotenvy.workspace = true
elasticsearch = "8.15.0-alpha.1"
futures.workspace = true
futures-util.workspace = true
parking_lot = { version = "0.12", features = ["serde"] }
pedronauck-data-parser.workspace = true
pedronauck-message-broker.workspace = true
pedronauck-streams-store.workspace = true
pedronauck-streams-types.workspace = true
prometheus = { version = "0.13", features = ["process"] }
rand.workspace = true
rust_decimal = { version = "1.13" }
serde.workspace = true
serde_json.workspace = true
serde_prometheus = { version = "0.2" }
sqlx = { workspace = true, default-features = false, features = [
  "any",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
strum.workspace = true
sysinfo = { version = "0.29" }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio.workspace = true
tokio-util = "0.7.13"
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
mockall = "0.13.1"
pretty_assertions.workspace = true

# in an individual package Cargo.toml
[package.metadata.cargo-machete]
ignored = ["pedronauck-data-parser"]

[features]
default = []
test-helpers = [
  "pedronauck-data-parser/test-helpers",
  "pedronauck-message-broker/test-helpers",
  "pedronauck-streams-store/test-helpers",
  "pedronauck-streams-types/test-helpers",
]
