[package]
name = "generate-api-keys"
description = "Generate api keys for webserver"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
displaydoc.workspace = true
dotenvy.workspace = true
pedronauck-data-parser.workspace = true
pedronauck-streams-store.workspace = true
pedronauck-web-utils.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# in an individual package Cargo.toml
[package.metadata.cargo-machete]
ignored = ["pedronauck-data-parser"]

[features]
default = []
test-helpers = [
  "pedronauck-data-parser/test-helpers",
  "pedronauck-streams-store/test-helpers",
  "pedronauck-web-utils/test-helpers",
]
