[package]
name = "sv-api"
description = "Fuel library for retrieving data from a fuel indexed database"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "sv-api"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
displaydoc.workspace = true
dotenvy.workspace = true
fuel-tx.workspace = true
fuel-vm.workspace = true
num_cpus.workspace = true
pedronauck-data-parser.workspace = true
pedronauck-streams-core = { workspace = true, features = ["openapi"] }
pedronauck-streams-domains.workspace = true
pedronauck-streams-store.workspace = true
pedronauck-web-utils.workspace = true
prometheus = { version = "0.13", features = ["process"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
validator = { version = "0.20.0", features = ["derive"] }

# in an individual package Cargo.toml
[package.metadata.cargo-machete]
ignored = ["pedronauck-data-parser"]

[features]
default = []
test-helpers = [
  "pedronauck-data-parser/test-helpers",
  "pedronauck-streams-store/test-helpers",
  "pedronauck-web-utils/test-helpers",
]

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
